Changed .env to (hopefully) be read by jenkins

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME="Marc Vouve"
-APP_ENV=testing
+APP_ENV=local
 APP_KEY=base64:Dx5hO40QQuvNIYyedr4Ob+wVBn3SE+29F6fTUb+jYMI=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
