--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -17,7 +17,7 @@
     </testsuites>
     <filter>
         <whitelist>
-            <directory>./src/</directory>
+            <directory>./</directory>
         </whitelist>
     </filter>
     <logging>
