--- a/.env
+++ b/.env
@@ -3,7 +3,8 @@ APP_ENV=local
 APP_KEY=base64:Dx5hO40QQuvNIYyedr4Ob+wVBn3SE+29F6fTUb+jYMI=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://192.168.0.15/
+APP_URL=http://127.0.0.2/
+APP_ORIGINS=http://127.0.0.2/
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
